# hipchat

./: README.md  hipchat.cabal
app/: Chat.hs  Main.hs  SimpleChat.hs
app/Util/: JsonRequestLogger.hs
docs/: addon-capabilties.schema.json  server-capabilities.json
src/: HipChat.hs
src/Control/Lens/: AsText.hs
src/HipChat/: Auth.hs  Types.hs  Util.hs
src/HipChat/API/: Auth.hs  Capabilities.hs  Rooms.hs  Types.hs
src/HipChat/AddOn/: Capabilities.hs  Dialog.hs  Glance.hs  Icon.hs  Key.hs  Name.hs  Registration.hs  Types.hs  WebPanel.hs  Webhooks.hs
src/HipChat/AddOn/Types/: AuthenticationMethod.hs  Icon.hs  Name.hs  RoomEvent.hs
src/HipChat/Auth/: Token.hs  Types.hs
src/HipChat/Types/: Key.hs  URL.hs
