name:                hipchat
version:             0.1.0.0
synopsis:            Bindings for Atlassian HipChat's REST API and AddOn API
homepage:            https://github.com/mjhopkins/hipchat
bug-reports:         https://github.com/mjhopkins/hipchat/issues
license:             BSD3
license-file:        LICENSE
author:              Mark Hopkins
maintainer:          markjohnhopkins@gmail.com
copyright:           Mark Hopkins
category:            Chat, API, Web
build-type:          Simple
stability:           experimental
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10
description:
  Atlassian <https://www.hipchat.com> is a web service for chat and messaging.
  .
  This package supplies Haskell bindings to the HipChat REST API, and also
  types and functions to help you write a HipChat add-on (bot).
  .
  Built with <http://hackage.haskell.org/package/servant Servant>.

library
  hs-source-dirs:      src
  exposed-modules:     HipChat
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:        -Wall 

source-repository head
  type:     git
  location: https://github.com/mjhopkins/hipchat
