name:                hipchat
version:             0.1.0.0
synopsis:            Bindings for Atlassian HipChat's REST API and AddOn API
homepage:            https://github.com/mjhopkins/hipchat
bug-reports:         https://github.com/mjhopkins/hipchat/issues
license:             BSD3
license-file:        LICENSE
author:              Mark Hopkins
maintainer:          markjohnhopkins@gmail.com
copyright:           Mark Hopkins
category:            Chat, API, Web
build-type:          Simple
stability:           experimental
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10
description:
  Atlassian <https://www.hipchat.com> is a web service for chat and messaging.
  .
  This package supplies Haskell bindings to the HipChat REST API, and also
  types and functions to help you write a HipChat add-on (bot).
  .
  Built with <http://hackage.haskell.org/package/servant Servant>.

library
  hs-source-dirs:      src
  exposed-modules:     HipChat
                     , HipChat.Types
                     , HipChat.Auth
                     , HipChat.Auth.Types
                     , HipChat.API.Rooms
                     , HipChat.API.Capabilities
                     , HipChat.API.Types
                     , HipChat.AddOn.Capabilities
                     , HipChat.AddOn.Webhooks
                     , HipChat.AddOn.Registration
                     , HipChat.AddOn.Types
  other-modules:       Control.Lens.AsText
                     , HipChat.Util
                     , HipChat.Auth.Token
                     , HipChat.AddOn.Types.AuthenticationMethod
                     , HipChat.AddOn.Types.Icon
                     , HipChat.AddOn.Types.Name
                     , HipChat.AddOn.Types.RoomEvent
                     , HipChat.AddOn.Dialog
                     , HipChat.AddOn.Glance
                     , HipChat.Types.Key
                     , HipChat.AddOn.WebPanel
                     , HipChat.Types.URL
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , attoparsec
                     , blaze-builder
                     , bytestring-builder
                     , data-default
                     , http-api-data
                     , http-types
                     , lens
                     , network-uri
                     , regex-pcre
                     , servant
                     , servant-client
                     , template-haskell
                     , text
                     , time
                     , utf8-string
  default-language:    Haskell2010
  ghc-options:        -Wall

executable chat
  hs-source-dirs:      app
  main-is:             Chat.hs
  other-modules:       Util.JsonRequestLogger
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-pretty
                     , async
                     , attoparsec
                     , base64-bytestring
                     , blaze-builder
                     , bytestring
                     , case-insensitive
                     , containers
                     , data-default
                     , exceptions
                     , fast-logger
                     , hipchat
                     , http-client
                     , http-client-tls
                     , http-media
                     , http-types
                     , iproute
                     , lens
                     , lifted-base
                     , machines
                     , monad-control
                     , mtl
                     , network
                     , servant
                     , servant-client
                     , servant-server
                     , string-conversions
                     , text
                     , time
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010
  ghc-options:         -Wall

executable simple-chat
  hs-source-dirs:      app
  main-is:             SimpleChat.hs
  other-modules:       Util.JsonRequestLogger
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-pretty
                     , async
                     , attoparsec
                     , base64-bytestring
                     , blaze-builder
                     , bytestring
                     , case-insensitive
                     , containers
                     , data-default
                     , exceptions
                     , fast-logger
                     , hipchat
                     , http-client
                     , http-client-tls
                     , http-media
                     , http-types
                     , iproute
                     , lens
                     , lifted-base
                     , machines
                     , monad-control
                     , mtl
                     , network
                     , servant
                     , servant-client
                     , servant-server
                     , string-conversions
                     , text
                     , time
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/mjhopkins/hipchat
